--- a/static/css/style.css
+++ b/static/css/style.css
@@ -465,3 +465,12 @@ td form {
   transform: scale(1.08);
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
 }
+
+.my-table {
+    border-collapse: collapse;
+    width: 100%;
+}
+.my-table th, .my-table td {
+    border: 1px solid #222;
+    padding: 5px;
+}
