--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 {% load custom_filters %}
-
 {% block content %}
-  <h2 style="text-align: center">{{ request.user.profile.station.name }}</h2>
-
-  <style>
+    <h2 style="text-align: center">{{ request.user.profile.station.name }}</h2>
+    <style>
     .equipment-table {
       width: 80%;
       margin: 2em auto;
@@ -31,29 +29,31 @@
       font-size: 1.5em;
       font-weight: bold;
     }
-  </style>
-
-  {% for group_name, items in groups %}
-    <div class="equipment-group">{{ group_name }}</div>
-    <table class="equipment-table">
-      <tr>
-        <th>Typ</th>
-        <th>Znak</th>
-        <th>Nadchádzajúce revízie</th>
-      </tr>
-      {% for item in items %}
-        <tr class="{% if item.is_red %}red-row{% endif %}">
-          <td>{{ item.type }}</td>
-          <td>{{ item.e_number }}</td>
-          <td>
-            {% for f, date in item.relevant_dates %}
-              {{ f }}: {{ date|date:"d.m.Y" }}<br>
+    </style>
+    {% for group_name, items in groups %}
+        <div class="equipment-group">{{ group_name }}</div>
+        <table class="equipment-table">
+            <tr>
+                <th>Typ</th>
+                <th>Znak</th>
+                <th>Nadchádzajúce revízie</th>
+            </tr>
+            {% for item in items %}
+                <tr class="{% if item.is_red %}red-row{% endif %}">
+                    <td>{{ item.type }}</td>
+                    <td>{{ item.e_number }}</td>
+                    <td>
+                        {% for f, date in item.relevant_dates %}
+                            {{ f }}: {{ date|date:"d.m.Y" }}
+                            <br>
+                        {% endfor %}
+                    </td>
+                </tr>
+            {% empty %}
+                <tr>
+                    <td colspan="3">Žiadne revízie</td>
+                </tr>
             {% endfor %}
-          </td>
-        </tr>
-      {% empty %}
-        <tr><td colspan="3">Žiadne revízie</td></tr>
-      {% endfor %}
-    </table>
-  {% endfor %}
+        </table>
+    {% endfor %}
 {% endblock %}
