--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  Vytvorené: SDA; | &nbsp; Linka tiesňového volania: <strong>150</strong>
+    Vytvorené: ®TMA sro.; | &nbsp; Linka tiesňového volania: <strong>150</strong>
 </footer>
